# gwen

./: .gitignore  CLAUDE.md  CMakeLists.txt  EVAL_HARNESS_PLAN.md  HANDOFF.md  METHODOLOGY.md  Makefile  PERFORMANCE.md  PLAN.md  README.md  SCALE_UP.md  next-steps.md  pyproject.toml
archive/: Makefile
archive/include/gwen/: common.h  ggml_quants.h  gguf.h  inference.h  kernels.h  memory.h  mma_types.cuh  tokenizer.h
archive/src/: dev_server.cpp  inference.cu  main.cu
archive/src/kernels/: activation.cu  dequant.cu  fattn_mma.cu  gemv.cu  reduction.cu  rmsnorm.cu  rope.cu  softmax.cu  topk.cu
bench/: bench_gemm_approaches.cu  cycle_times.json  gwen_bench.cu  macro_bench.py  profile_forward.cu
blog/: 00-starting-gwen.md  02-taming-deltanet.md  03-squeezing-the-5070ti.md  04-prefill-going-parallel.md  05-final-results.md  06-beating-llama-cpp.md  07-kernel-fusion-cutlass.md  07-numerical-precision-investigation.md  08-profiling-and-kernel-optimization.md  09-mtp-speculative-decoding.md  10-token-frequency-distribution.md  11-activation-replay-mtp-verdict.md  12-mtp-finetuning-setup.md  13-mtp-finetuning-training.md  14-batched-gemm-extraction.md  15-re-verify-llama-cpp.md  16-failed-gemm-optimization.md  17-profiling-all-paths.md  18-chunkwise-deltanet.md  19-mtp-training-pipeline-fixes.md  20-aligning-cuda-pytorch-mtp.md  21-mtp-v3-soft-distillation.md  22-squeezing-speculative-decode.md  23-pidk-pipeline-and-shm.md  24-sparse-distillation-topk-idk.md  25-v5-sparse-distillation-results.md  26-marlin-tensor-core-gemv.md  27-the-instruct-model-mistake.md  28-v7-oov-gate-experiment.md  29-matching-and-beating-llama-cpp-prefill.md  29-mtp-in-llama-slim.md  30-eliminating-the-fp16-weight-copy.md  30-mtp-kv-cache.md  31-eliminating-cpu-roundtrips.md  31-fp8-the-right-format.md  32-nvfp4-4b-port.md  32-profiling-mtp-bottleneck.md  33-fp4-gemv-optimization.md  33-optimization-sprint.md  34-9b-gguf-kquant-port.md  (+17 more)
common/: arg.cpp  common.cpp  common.h
data/: output_norm.npy
ggml/include/: ggml.h
ggml/src/ggml-cuda/: gated_delta_net.cu  getrows.cu  ggml-cuda.cu
include/: llama.h
include/gwen/: common.h  cp_async.cuh  flash_attn_mma.cuh  ggml_quants.h  inference.h  kernels.h  llama_common.cuh  llama_convert.cuh  llama_cp_async.cuh  llama_fattn_common.cuh  llama_fattn_mma_f16.cuh  llama_ggml_defs.h  llama_mma.cuh  llama_mmq.cuh  llama_quantize.cuh  llama_vecdotq.cuh  model.h  options.h  paths.h  tokenizer.h
include/gwen/llama/: common.cuh  convert.cuh  fattn-common.cuh  fattn-mma-f16.cuh  ggml-defs.h  mma.cuh  mmq.cuh  vecdotq.cuh
llama-slim/common/: common.cpp
llama-slim/ggml/include/: ggml.h
llama-slim/ggml/src/: CMakeLists.txt  ggml.c
llama-slim/ggml/src/ggml-cuda/: concat.cu  gated_delta_net.cu  ggml-cuda.cu  mmvf.cu
llama-slim/include/: llama.h
llama-slim/src/: CMakeLists.txt  llama-arch.cpp  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-kv-cache.cpp  llama-model.cpp
llama-slim/src/models/: delta-net-base.cpp  models.h  qwen35.cpp
llama-slim/tools/: CMakeLists.txt
llama-slim/tools/completion/: completion.cpp
profiles/: deltanet.raw.txt  fused_kernels.raw.txt  gemv_q4k.raw.txt  lm_head.raw.txt
prompts/: chatml.tmpl  corrector.tmpl
scripts/: 00_prepare_training_data.py  01_prepare_restricted_vocab.py  02_extract_val_cache.py  02_prepare_models.py  analyze_restricted_vocab.py  analyze_think_loops.py  bench.sh  bench_decode.sh  bench_lm_head_sizes.sh  bench_mtp.sh  bench_mtp_llama.sh  bench_prefill.sh  build_reduced_lm_head.py  check_torch.py  compare_3way.py  compare_outputs.sh  config.sh  convert_nvfp4.py  dump_gguf.py  dump_weight_sizes.py  extract_mtp_gguf.py  extract_mtp_weights.py  generate_golden.sh  generate_gwen_golden.sh  ncu_profile.sh  nsys_profile.sh  nvfp4_reference.py  quantize_fp8.py  recompute_counts.py  svd_lm_head.py  test_correctness.sh  test_fla.py  test_logits.py  test_think_loops.sh  test_transcription.sh  test_website.sh  token_frequency.py
scripts/marlin/: bench_gemv_variants.cu  bench_pipeline.cu  test_gemv_variants.cu  test_marlin_correctness.cu  test_mma_sync.cu
src/: brave_search.cpp  brave_search.h  dev_server.cpp  gguf.cu  gwen.cpp  gwen.h  inference.cu  llama-arch.cpp  llama-context.cpp  llama-context.h  llama-graph.h  llama-hparams.h  llama-memory-recurrent.cpp  llama-model.cpp  llama-model.h  llama.cpp  main.cu  memory.cu  model.cu  server.cpp  tokenizer.cu
src/kernels/: activation.cu  dequant.cu  fattn_mma.cu  gemm.cu  gemm_cutlass.cu  gemm_fp8.cu  gemm_mmq.cu  gemv.cu  gemv_async.cu  gemv_fp16.cu  gemv_fp4.cu  gemv_fp8.cu  gemv_mma.cu  rmsnorm.cu  rope.cu
src/models/: delta-net-base.cpp  qwen35.cpp
tests/: bench_batch_extract.py  check_embed.py  check_logits_from_dump.py  check_tensors.py  compare_logits.cpp  compare_logits.py  compare_outputs.py  compare_step_by_step.cpp  debug_first_layer.py  dump_llama_cpu.cpp  dump_llama_tensors.cpp  f32_forward.cpp  llama_dump_layers.cpp  llama_dump_logits.cpp  llama_generate.cpp  llama_golden.cpp  llama_logits.cpp  profile_batch_extract.py  profile_sweep.py  quick_layer0.py  test_batch_compare.py  test_dp4a.cu  test_gemm.cu  test_gemv_accuracy.cu  test_kernels.cu  test_mtp_acceptance_detail.py  test_mtp_chat_template.py  test_mtp_correctness.py  test_mtp_degradation.py  test_mtp_lmhead_impact.py  test_mtp_patterns.py  test_mtp_pos_fix.py  verify_layer0.py  verify_layers.py  verify_lm_head.py
tests/golden_greedy/: prompt_0.txt  prompt_1.txt  prompt_2.txt  prompt_3.txt  prompt_4.txt  prompt_5.txt  teacher_forcing.txt
tests/golden_gwen/: README  prompt_0.tokens  prompt_1.tokens  prompt_2.tokens  prompt_3.tokens  prompt_4.tokens  prompt_5.tokens  prompt_6.tokens  prompt_7.tokens
tools/: CMakeLists.txt
tools/completion/: completion.cpp
tools/gwen/: CMakeLists.txt  main.cpp
tools/mtmd/: tests.sh
tools/server/tests/: utils.py
train/: dataset.py  finetune.py  gwen_client.py  model.py  prepare_data.py  pyproject.toml  train_mtp.py
