# dependencies

find_package(Threads REQUIRED)

# third-party

# ...

# flags

llama_add_compile_flags()

# tools

if (EMSCRIPTEN)
else()
    add_subdirectory(llama-bench)
    add_subdirectory(completion)
    add_subdirectory(gwen)
    if (LLAMA_BUILD_SERVER)
        add_subdirectory(mtmd)
        add_subdirectory(cli)
        add_subdirectory(server)
    endif()
endif()
